crates/compiler/src/tests/e2e/good/0051_generic_trait_impl_dyn_dispatch/main.gom
struct Box[T] {
    value: T,
}

trait Printable {
    fn print_me(Self) -> string;
}

impl Printable for int32 {
    fn print_me(self: int32) -> string {
        (self).to_string()
    }
}

impl[T: Printable] Printable for Box[T] {
    fn print_me(self: Box[T]) -> string {
        "Box(" + Printable::print_me(self.value) + ")"
    }
}

fn show(x: dyn Printable) -> string {
    Printable::print_me(x)
}

fn main() {
    let b: Box[int32] = Box { value: 42 };
    println(show(b));
}
